# customer-service-agent-system

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.py  sampleData.py  testTOOL.py
customer_service/: .env.example  __init__.py  agent.py  config.py  prompts.py
customer_service/entities/: customer.py
customer_service/shared_libraries/: callbacks.py
customer_service/sub_agents/Databaseagent/: __init__.py  agent.py  prompt.py
customer_service/sub_agents/googlesearchagent/: __init__.py  agent.py
customer_service/sub_agents/inventoryAgent/: __init__.py  agent.py
customer_service/tools/: tools.py
deployment/: deploy.py
